[gd_scene load_steps=43 format=3 uid="uid://cbkg6sqct0dy4"]

[ext_resource type="Script" path="res://Scripts/GameOver.gd" id="1_c66l3"]
[ext_resource type="TileSet" uid="uid://k6xdmgt10fup" path="res://Assets/MenuTileMap.tres" id="1_vrj3b"]
[ext_resource type="Texture2D" uid="uid://c4s3c0okroc6c" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton1.png" id="3_2vibk"]
[ext_resource type="FontFile" uid="uid://cd1lslc06srhj" path="res://Assets/OldWizard.ttf" id="3_veawe"]
[ext_resource type="Texture2D" uid="uid://bborlc5oscj0c" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton2.png" id="4_m3no0"]
[ext_resource type="Texture2D" uid="uid://tx4si4hsu3na" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton3.png" id="5_jqynl"]
[ext_resource type="Texture2D" uid="uid://dardc48mbwix4" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton4.png" id="6_b0k3q"]
[ext_resource type="Texture2D" uid="uid://die63lkghe7io" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton5.png" id="7_he2ub"]
[ext_resource type="Texture2D" uid="uid://bov6hm3nhcu16" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton6.png" id="8_5e6tg"]
[ext_resource type="Texture2D" uid="uid://dtccpov5p4lv4" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton7.png" id="9_m0kgj"]
[ext_resource type="Texture2D" uid="uid://slgecijiqyev" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton8.png" id="10_oix81"]
[ext_resource type="Texture2D" uid="uid://ch4kx2rexqn11" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton9.png" id="11_5ti1a"]
[ext_resource type="Texture2D" uid="uid://cri0s0gvatvnk" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton10.png" id="12_wb5gx"]
[ext_resource type="Texture2D" uid="uid://dwgqbgtwmuxcj" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton11.png" id="13_c4cxi"]
[ext_resource type="Texture2D" uid="uid://b48sl3ajj4dc7" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton12.png" id="14_61b2c"]
[ext_resource type="Texture2D" uid="uid://bftoia8715pos" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton13.png" id="15_6bokc"]
[ext_resource type="Texture2D" uid="uid://dhorg0b4vts5l" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton14.png" id="16_4dap5"]
[ext_resource type="Texture2D" uid="uid://cf3brlg0bx1dd" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton15.png" id="17_r284t"]
[ext_resource type="Texture2D" uid="uid://dre7m638apu54" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton16.png" id="18_tt75n"]
[ext_resource type="Texture2D" uid="uid://coxtr57tb18wt" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton17.png" id="19_nml5s"]
[ext_resource type="Texture2D" uid="uid://ra8iectftafw" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton18.png" id="20_ehwo2"]
[ext_resource type="Texture2D" uid="uid://drepf0e5h3j6w" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton19.png" id="21_jsabf"]
[ext_resource type="Texture2D" uid="uid://da1itcxm5a2tp" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton20.png" id="22_1xlm7"]
[ext_resource type="Texture2D" uid="uid://bosmkyw2sdstg" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton21.png" id="23_n6g0j"]
[ext_resource type="Texture2D" uid="uid://c1rcnhmfesq3b" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton22.png" id="24_tot6j"]
[ext_resource type="Texture2D" uid="uid://dtaln3kg63wyd" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton23.png" id="25_ycxhp"]
[ext_resource type="Texture2D" uid="uid://bpo4xc3xxwv4c" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton24.png" id="26_h3iog"]
[ext_resource type="Texture2D" uid="uid://boy778pvs2jgw" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton25.png" id="27_14rqq"]
[ext_resource type="Texture2D" uid="uid://1omuvd06opbj" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton26.png" id="28_kcdw4"]
[ext_resource type="Texture2D" uid="uid://ddbpsa4hue4dh" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton27.png" id="29_d63pd"]
[ext_resource type="Texture2D" uid="uid://ldspvnqd5nva" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton28.png" id="30_075dq"]
[ext_resource type="Texture2D" uid="uid://15jtola8u2q3" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton29.png" id="31_4im3b"]
[ext_resource type="Texture2D" uid="uid://c72hypy6071fm" path="res://Assets/DoomsphereCharset/Single PNGs/Outline/skeletonGameOver/BigSkeleton30.png" id="32_pvt41"]
[ext_resource type="Script" path="res://Scripts/Label.gd" id="33_1rleq"]
[ext_resource type="AudioStream" uid="uid://svp8nlcol8ff" path="res://Assets/Audio/explosion.wav" id="35_7ihsn"]
[ext_resource type="AudioStream" uid="uid://qy6i2prhb7jd" path="res://Assets/Audio/Game Over Blues.mp3" id="36_08oik"]

[sub_resource type="SpriteFrames" id="SpriteFrames_x5wcg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("32_pvt41")
}],
"loop": true,
"name": &"Deadge",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2vibk")
}, {
"duration": 1.0,
"texture": ExtResource("4_m3no0")
}, {
"duration": 1.0,
"texture": ExtResource("5_jqynl")
}, {
"duration": 1.0,
"texture": ExtResource("6_b0k3q")
}, {
"duration": 1.0,
"texture": ExtResource("7_he2ub")
}, {
"duration": 1.0,
"texture": ExtResource("8_5e6tg")
}, {
"duration": 1.0,
"texture": ExtResource("9_m0kgj")
}, {
"duration": 1.0,
"texture": ExtResource("10_oix81")
}, {
"duration": 1.0,
"texture": ExtResource("11_5ti1a")
}, {
"duration": 1.0,
"texture": ExtResource("12_wb5gx")
}, {
"duration": 1.0,
"texture": ExtResource("13_c4cxi")
}, {
"duration": 1.0,
"texture": ExtResource("14_61b2c")
}, {
"duration": 1.0,
"texture": ExtResource("15_6bokc")
}, {
"duration": 1.0,
"texture": ExtResource("16_4dap5")
}, {
"duration": 1.0,
"texture": ExtResource("17_r284t")
}, {
"duration": 1.0,
"texture": ExtResource("18_tt75n")
}, {
"duration": 1.0,
"texture": ExtResource("19_nml5s")
}, {
"duration": 1.0,
"texture": ExtResource("20_ehwo2")
}, {
"duration": 1.0,
"texture": ExtResource("21_jsabf")
}, {
"duration": 1.0,
"texture": ExtResource("22_1xlm7")
}, {
"duration": 1.0,
"texture": ExtResource("23_n6g0j")
}, {
"duration": 1.0,
"texture": ExtResource("24_tot6j")
}, {
"duration": 1.0,
"texture": ExtResource("25_ycxhp")
}, {
"duration": 1.0,
"texture": ExtResource("26_h3iog")
}, {
"duration": 1.0,
"texture": ExtResource("27_14rqq")
}, {
"duration": 1.0,
"texture": ExtResource("28_kcdw4")
}, {
"duration": 1.0,
"texture": ExtResource("29_d63pd")
}, {
"duration": 1.0,
"texture": ExtResource("30_075dq")
}, {
"duration": 1.0,
"texture": ExtResource("31_4im3b")
}, {
"duration": 1.0,
"texture": ExtResource("32_pvt41")
}],
"loop": false,
"name": &"GameOver",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2vibk")
}, {
"duration": 1.0,
"texture": ExtResource("3_2vibk")
}],
"loop": false,
"name": &"PreSlice",
"speed": 2.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p46k5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7fbw1"]

[sub_resource type="Animation" id="Animation_5fb0f"]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Quit:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_h4y8g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Quit:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n4oyb"]
_data = {
"FadeIn": SubResource("Animation_5fb0f"),
"RESET": SubResource("Animation_h4y8g")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c66l3")

[node name="TileMap2" type="TileMap" parent="."]
tile_set = ExtResource("1_vrj3b")
format = 2
layer_0/tile_data = PackedInt32Array(786432, 131072, 3, 786454, 196608, 3, 0, 0, 3, 22, 65536, 3, 1, 0, 1, 2, 262144, 1, 3, 262144, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 262144, 1, 8, 262144, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 2, 15, 65536, 2, 16, 0, 1, 17, 0, 1, 18, 0, 1, 19, 262144, 1, 20, 0, 1, 21, 0, 1, 786433, 65536, 1, 786434, 65536, 1, 786435, 327680, 1, 786436, 327680, 1, 786437, 65536, 1, 786438, 65536, 1, 786439, 131072, 2, 786440, 196608, 2, 786441, 65536, 1, 786442, 65536, 1, 786443, 65536, 1, 786444, 327680, 1, 786445, 65536, 1, 786446, 65536, 1, 786447, 65536, 1, 786448, 65536, 1, 786449, 65536, 1, 786450, 327680, 1, 786451, 327680, 1, 786452, 65536, 1, 786453, 65536, 1, 65558, 131072, 1, 131094, 393216, 1, 196630, 131072, 1, 262166, 131072, 1, 327702, 131072, 1, 393238, 131072, 1, 458774, 131072, 1, 524310, 393216, 1, 589846, 393216, 1, 655382, 131072, 1, 720918, 131072, 1, 720896, 196608, 1, 655360, 196608, 1, 589824, 458752, 1, 524288, 196608, 1, 458752, 196608, 1, 393216, 196608, 1, 327680, 196608, 1, 262144, 458752, 1, 196608, 458752, 1, 131072, 458752, 1, 65536, 196608, 1, 393230, 458752, 3, 327694, 458752, 3, 262158, 458752, 3, 196622, 458752, 3, 131086, 458752, 3, 65550, 458752, 3, 65549, 458752, 3, 65548, 458752, 3, 65547, 458752, 3, 65546, 458752, 3, 65545, 458752, 3, 65544, 458752, 3, 65543, 458752, 3, 65542, 458752, 3, 65541, 458752, 3, 65540, 458752, 3, 65539, 458752, 3, 65538, 327680, 0, 65537, 131072, 0, 131073, 327680, 0, 196609, 458752, 3, 262145, 458752, 3, 327681, 458752, 3, 393217, 458752, 3, 458753, 458752, 3, 524289, 458752, 3, 589825, 458752, 3, 655361, 196608, 0, 720897, 262144, 0, 720898, 196608, 0, 655362, 458752, 0, 589826, 458752, 3, 524290, 458752, 3, 458754, 458752, 3, 393218, 458752, 3, 327682, 458752, 3, 262146, 458752, 3, 196610, 458752, 3, 131074, 458752, 0, 131075, 458752, 3, 196611, 458752, 3, 262147, 458752, 3, 327683, 458752, 3, 393219, 458752, 3, 458755, 458752, 3, 524291, 458752, 3, 589827, 458752, 3, 655363, 458752, 3, 720899, 458752, 3, 720900, 458752, 3, 655364, 458752, 3, 589828, 458752, 3, 524292, 458752, 3, 458756, 458752, 3, 393220, 458752, 3, 327684, 458752, 3, 262148, 458752, 3, 196612, 458752, 3, 131076, 458752, 3, 131077, 458752, 3, 196613, 458752, 3, 262149, 458752, 3, 327685, 458752, 3, 393221, 458752, 3, 458757, 458752, 3, 524293, 458752, 3, 589829, 458752, 3, 655365, 458752, 3, 720901, 458752, 3, 720902, 458752, 3, 655366, 458752, 3, 589830, 458752, 3, 524294, 458752, 3, 458758, 458752, 3, 393222, 458752, 3, 327686, 458752, 3, 262150, 458752, 3, 196614, 458752, 3, 131078, 458752, 3, 131079, 458752, 3, 196615, 458752, 3, 262151, 458752, 3, 327687, 458752, 3, 393223, 458752, 3, 458759, 458752, 3, 524295, 458752, 3, 589831, 458752, 3, 655367, 458752, 3, 720903, 458752, 3, 720904, 458752, 3, 655368, 458752, 3, 589832, 458752, 3, 524296, 458752, 3, 458760, 458752, 3, 393224, 458752, 3, 327688, 458752, 3, 262152, 458752, 3, 196616, 458752, 3, 131080, 458752, 3, 131081, 458752, 3, 196617, 458752, 3, 262153, 458752, 3, 327689, 458752, 3, 393225, 458752, 3, 458761, 458752, 3, 524297, 458752, 3, 589833, 458752, 3, 655369, 458752, 3, 720905, 458752, 3, 720906, 458752, 3, 655370, 458752, 3, 589834, 458752, 3, 524298, 458752, 3, 458762, 458752, 3, 393226, 458752, 3, 327690, 458752, 3, 262154, 458752, 3, 196618, 458752, 3, 131082, 458752, 3, 131083, 458752, 3, 196619, 458752, 3, 262155, 458752, 3, 327691, 458752, 3, 393227, 458752, 3, 458763, 458752, 3, 524299, 458752, 3, 589835, 458752, 3, 655371, 458752, 3, 720907, 458752, 3, 720908, 458752, 3, 589836, 458752, 3, 524300, 458752, 3, 458764, 458752, 3, 393228, 458752, 3, 327692, 458752, 3, 262156, 458752, 3, 196620, 458752, 3, 131084, 458752, 3, 131085, 458752, 3, 262157, 458752, 3, 327693, 458752, 3, 393229, 458752, 3, 458765, 458752, 3, 524301, 458752, 3, 589837, 458752, 3, 655373, 458752, 3, 720909, 458752, 3, 720910, 458752, 3, 655374, 458752, 3, 589838, 458752, 3, 524302, 458752, 3, 458766, 458752, 3, 393231, 458752, 3, 327695, 458752, 3, 262159, 458752, 3, 196623, 458752, 3, 131087, 458752, 3, 65551, 458752, 3, 65552, 458752, 3, 131088, 458752, 3, 196624, 458752, 3, 262160, 458752, 3, 327696, 458752, 3, 393232, 458752, 3, 655375, 458752, 3, 720911, 458752, 3, 393233, 458752, 3, 327697, 458752, 3, 262161, 458752, 3, 196625, 458752, 3, 131089, 458752, 3, 65553, 458752, 3, 65554, 458752, 3, 131090, 458752, 3, 196626, 458752, 3, 262162, 458752, 3, 327698, 458752, 3, 393234, 458752, 3, 458770, 458752, 3, 458771, 458752, 3, 393235, 458752, 3, 327699, 458752, 3, 262163, 458752, 3, 196627, 458752, 3, 131091, 458752, 3, 65555, 458752, 3, 65556, 262144, 0, 131092, 458752, 0, 196628, 458752, 3, 262164, 458752, 3, 327700, 458752, 3, 393236, 458752, 3, 458772, 458752, 3, 524308, 458752, 3, 589844, 458752, 3, 655380, 458752, 0, 720916, 131072, 0, 720917, 327680, 0, 655381, 131072, 0, 589845, 458752, 3, 524309, 458752, 3, 458773, 458752, 3, 393237, 458752, 3, 327701, 458752, 3, 262165, 458752, 3, 196629, 458752, 3, 131093, 262144, 0, 65557, 196608, 0, 655372, 458752, 3, 196621, 458752, 3, 458767, 458752, 3, 524303, 458752, 3, 589839, 458752, 3, 458768, 458752, 3, 458769, 458752, 3, 524306, 458752, 3, 589842, 458752, 3, 655378, 458752, 3, 720914, 458752, 3, 524307, 458752, 3, 589843, 458752, 3, 655379, 458752, 3, 720915, 458752, 3, 524304, 458752, 3, 589840, 458752, 3, 655376, 458752, 3, 655377, 458752, 3, 589841, 458752, 3, 524305, 458752, 3, 720913, 458752, 3, 720912, 458752, 3)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = 151.0
offset_top = 65.0
offset_right = 235.0
offset_bottom = 105.0

[node name="Label" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_veawe")
text = "Time: 
25.123s"
script = ExtResource("33_1rleq")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(4, 5)
offset = Vector2(-3.75, -4.49)
anchor_mode = 0
zoom = Vector2(5.21, 5.21)

[node name="Juicer" type="AnimatedSprite2D" parent="."]
position = Vector2(192, 98)
scale = Vector2(0.206416, 0.206416)
sprite_frames = SubResource("SpriteFrames_x5wcg")
animation = &"GameOver"
frame = 29
frame_progress = 1.0

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 113.0
offset_right = 116.0
offset_bottom = 129.0
focus_neighbor_bottom = NodePath("../StartButton")
theme_override_fonts/font = ExtResource("3_veawe")
theme_override_styles/normal = SubResource("StyleBoxEmpty_p46k5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7fbw1")
text = "Back to Menu"
alignment = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n4oyb")
}

[node name="DamageSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("35_7ihsn")

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("36_08oik")

[connection signal="animation_finished" from="Juicer" to="." method="_on_juicer_animation_finished"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
